# imgui-decoder

./: .gitignore
decoder/: BuildCMake.bat  CMakeLists.txt  decoder.cpp  decoder.hpp  decoderGUI.cpp  decoderGUI.hpp  decoder_android.cpp  decoder_android.hpp  decoder_apple.cpp  decoder_apple.hpp  decoder_ui.cpp  decoder_ui.hpp  decoder_windows.cpp  decoder_windows.hpp  decoder_windows_guid.hpp
decoder/api/: decoder_export.h  decoder_export_windows.cpp  decoder_export_windows.h
decoder/examples/: decoder_ui.cpp  decoder_ui.hpp
decoder/include/: decoder_export.h  decoder_export_windows.cpp
decoder/scripts/: BuildCMake.bat
decoder/src/: MfDX11UnityDecoder.cpp  decoder.cpp  decoder.hpp  decoder_android.cpp  decoder_android.hpp  decoder_android_OMX.hpp  decoder_android_surface.cpp  decoder_android_surface.hpp  decoder_android_texture.cpp  decoder_android_texture.hpp  decoder_apple.hpp  decoder_ui.cpp  decoder_ui.hpp  decoder_windows.cpp  decoder_windows.hpp  decoder_windows_guid.hpp  logger.cpp  logger.hpp
imgui_demo/scripts/: copy_imgui_examples.bat
imgui_demo/ui/: decoder_ui.cpp  decoder_ui.hpp
imgui_project/: update_imgui_example.bat
imgui_project/android/example_android_opengl3/: CMakeLists.txt
imgui_project/windows/example_win32_directx11/: build_win32.bat  example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters
imgui_project/windows/example_win32_directx12/: build_win32.bat  example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters
project/: copy_and_rename.bat
project/android/decoder_android_opengl3/: CMakeLists.txt  main.cpp
project/windows/: imgui_decoder.sln
unity_demo/: .gitignore
unity_demo/ProjectSettings/: ProjectSettings.asset
(+16 files in other folders)
